[package]
name = "codepage"
version = "0.1.1"
authors = ["Henri Sivonen <hsivonen@hsivonen.fi>"]
description = "Mapping between Windows code page numbers and encoding_rs character encodings"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/codepage/"
homepage = "https://docs.rs/codepage/"
repository = "https://github.com/hsivonen/codepage"
readme = "README.md"
keywords = ["encoding", "codepage", "unicode", "windows", "win32"]
categories = ["text-processing", "encoding"]

[badges]
travis-ci = { repository = "hsivonen/codepage" }

[dependencies]
encoding_rs = "0.8.13"